# ai-notebooks

./: .gitignore  LICENSE  README.md  open-ai-prompts.ipynb  plots-graphs-sigmoid.ipynb  pyproject.toml
