[project]
name = "ai-notebooks"
version = "2025.1.0"
description = "A collection of modern Jupyter notebooks exploring various aspects of AI, machine learning, and large language models"
authors = [
    {name = "Ashish Gaonker", email = ""}
]
dependencies = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "openai>=1.0.0",
    "scikit-learn>=1.3.0",
    "ipywidgets>=8.0.0",
    "tqdm>=4.65.0"
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
] 